# scriptmark

./: .envrc  .gitignore  Cargo.toml  README.md  deny.toml  pyproject.toml
.github/workflows/: build.yaml  build.yml  ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  config.rs  focus.rs  logger.rs  main.rs  state.rs  utils.rs  views.rs
crates/cli/src/tui/: mod.rs
crates/cli/src/views/: assignment.rs  class.rs  mod.rs
crates/code_runner/: Cargo.toml
crates/code_runner/src/python/: mod.rs  python_trace_code.py
crates/common/: Cargo.toml
crates/common/src/: config.rs  dump.rs  lib.rs  macros.rs  types.rs
crates/common/src/defines/: assignment.rs  class.rs  mod.rs  student.rs  submission.rs  task.rs  test_suite.rs  testresult.rs  testsuite.rs
crates/common/src/traits/: mod.rs  savenload.rs  serializable_error.rs  testsuite.rs
crates/dev/: Cargo.toml
crates/dev/src/: env.rs  lib.rs
crates/grader/: Cargo.toml
crates/grader/src/: check.rs  config.rs  main.rs
crates/grader/src/defines/: assignment.rs  class.rs  keyed.rs  mod.rs  student.rs  submission.rs  task.rs
crates/grader/src/traits/: mod.rs  savable.rs  saveload.rs  savenload.rs
crates/grader/src/tui/: mod.rs
crates/lab/: Cargo.toml
crates/lab/src/: bigger.rs  chicken_rabbit.rs  circle_area.rs  circle_area_2.rs  grading.rs  lib.rs  poem.rs  population.rs  rhombus.rs  sequence.rs  three_number.rs
crates/lab/src/solutions/: three_number.py
crates/labs/: Cargo.toml
crates/labs/src/: lib.rs
crates/labs/src/solutions/: 1.py  bigger.rs  chicken_rabbit.py  chicken_rabbit.rs  circle_area.py  circle_area.rs  circle_area_2.rs  grading.rs  hundred_chickens.rs  k_number.rs  lower_case_to_upper_case.rs  mod.rs  poem.rs  population.rs  rhombus.rs  sequence.py  sequence.rs  strip_html_tags.rs  three_number.py  (+2 more)
crates/runner/: Cargo.toml
crates/runner/src/: python.rs
crates/scriptmark/: Cargo.toml
crates/scriptmark-canvas/: Cargo.toml
crates/scriptmark-canvas/src/: client.rs
crates/scriptmark-cli/: Cargo.toml
crates/scriptmark-cli/src/: display.rs  main.rs  report.rs
crates/scriptmark-core/: Cargo.toml
crates/scriptmark-core/src/: discovery.rs  grading.rs  lib.rs  roster.rs  similarity.rs  spec_loader.rs
crates/scriptmark-core/src/models/: config.rs  mod.rs  result.rs  spec.rs  submission.rs
crates/scriptmark-db/: Cargo.toml
crates/scriptmark-db/src/: lib.rs  queries.rs  results.rs  roster.rs  schema.rs
crates/scriptmark-py/: Cargo.toml
crates/scriptmark-py/src/: lib.rs
crates/scriptmark-runner/: Cargo.toml
crates/scriptmark-runner/src/: executor.rs  expander.rs  generator.rs  lib.rs  linter.rs  oracle.rs  orchestrator.rs  python.rs  resolve.rs  sandbox.rs
crates/scriptmark-runner/src/checker/: builtin.rs  mod.rs  python_checker.rs  rhai_checker.rs
crates/scriptmark-runner/tests/: integration.rs
crates/scriptmark-tui/: Cargo.toml
crates/scriptmark-tui/src/: app.rs  ui.rs
crates/scriptmark/src/: display.rs  grading.rs  lib.rs  main.rs  report.rs  report_template.html  roster.rs  similarity.rs
crates/scriptmark/src/canvas/: client.rs  mod.rs
crates/scriptmark/src/checker/: builtin.rs  python_checker.rs  rhai_checker.rs
crates/scriptmark/src/db/: mod.rs  queries.rs  results.rs  roster.rs  schema.rs
crates/scriptmark/src/models/: config.rs  result.rs
crates/scriptmark/src/runner/: executor.rs  expander.rs  generator.rs  linter.rs  mod.rs  oracle.rs  orchestrator.rs  python.rs  resolve.rs
crates/scriptmark/src/tui/: app.rs  ui.rs
crates/scriptmark/tests/: integration.rs
crates/solutions/: Cargo.toml
crates/solutions/src/: bigger.rs  chicken_rabbit.rs  circle_area.rs  circle_area_2.rs  grading.rs  lib.rs  poem.rs  population.rs  rhombus.rs  sequence.rs  three_number.rs
crates/suite/: Cargo.toml
crates/suite/src/: test_suite.rs
docs/: linear-issues.md
docs/superpowers/plans/: 2026-03-31-parametrize-oracle.md
examples/python/: test_larger_number.toml
python/scriptmark/: __init__.py
src/: assignment.rs  check.rs  class.rs  config.rs  main.rs  run.rs  student.rs  submission_record.rs
src/defines/: assignment.rs  mod.rs  student.rs  submission_record.rs  suite.rs
src/grade/: circle_area.rs  lab1.rs
src/grader/: Cargo.toml  args.py  run_test.py  summary.py
src/grader/src/: check.rs  config.rs  main.rs
src/grader/src/defines/: assignment.rs  class.rs  mod.rs  student.rs
src/grader/src/tui/: mod.rs
src/lab/: Cargo.toml  circle_area.rs  mod.rs
src/lab/src/: bigger.rs  chicken_rabbit.rs  circle_area.rs  circle_area_2.rs  grading.rs  hundred_chickens.rs  k_number.rs  lib.rs  poem.rs  population.rs  sequence.rs  three_number.rs
src/runner/: Cargo.toml
src/runner/src/: python.rs
src/scriptmark/: __init__.py  main.py  run_test.py  summary.py  utils.py
src/suite/: Cargo.toml
src/suite/src/: test_suite.rs
src/tui/: mod.rs
src/util/: Cargo.toml
src/util/src/: lib.rs
tests/: conftest.py  test_parse.py
tests/fixtures/: summary_report.xml
tests/geec/final/: test_metro.toml  test_parse_input.toml
tests/geec/hw10/: test_leap.toml  test_palindrome.toml
tests/geec/hw3/: test_chicken_n_rabbit.py  test_chicken_rabbit.toml  test_list.py  test_list.toml
tests/geec/hw4/: test_poetry.toml
tests/geec/hw5/: test_grade.toml  test_number.toml
tests/geec/hw6/: test_chicken.toml  test_diamond.toml  test_k.toml
tests/geec/hw7/: test_scan.toml  test_similar.toml
tests/geec/hw8/: test_email.toml  test_html.toml
tests/geec/hw9/: test_switch_case.toml
tests_submission/: conftest.py
tests_submission/geec/final/: test_metro.py
tests_submission/geec/hw10/: test_leap.py  test_palindrome.py
tests_submission/geec/hw3/: test_chicken_n_rabbit.py  test_list.py
tests_submission/geec/hw4/: test_poetry.py
tests_submission/geec/hw5/: test_grade.py  test_number.py
tests_submission/geec/hw6/: test_chicken.py  test_diamond.py  test_k.py
tests_submission/geec/hw7/: test_scan.py  test_similar.py
tests_submission/geec/hw8/: test_email.py  test_html.py
tests_submission/geec/hw9/: test_switch_case.py
(+6 files in other folders)
