[workspace]
members = [
	"crates/code_runner",
	"crates/common", "crates/dev", "crates/cli"
	, "crates/labs"]
default-members = ["crates/cli"] # 默认主项目

resolver = "2"

[workspace.dependencies]
common = { path = "crates/common" }
labs = { path = "crates/labs" }
code_runner = { path = "crates/code_runner" }
dev = { path = "crates/dev" }
cli = { path = "crates/cli" }
