[workspace]
resolver = "2"
members = [
	"crates/scriptmark-core",
	"crates/scriptmark-runner",
	"crates/scriptmark-cli",
	"crates/scriptmark-canvas",
	"crates/scriptmark-db",
	"crates/scriptmark-py",
	"crates/scriptmark-tui",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Acture <acturea@gmail.com>"]
repository = "https://github.com/Acture/ScriptMark"
homepage = "https://github.com/Acture/ScriptMark"
keywords = ["grading", "education", "autograding", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
csv = "1"
quick-xml = { version = "0.37", features = ["serialize"] }

# Async
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Scripting
rhai = "1"

# Display
comfy-table = "7"
owo-colors = "4"

# Error handling
thiserror = "2"
anyhow = "1"

# Regex
regex = "1"

# Archive
zip = { version = "8", default-features = false, features = ["deflate"] }

# System
libc = "0.2"

# Random
rand = "0.9"

# Python bindings
pyo3 = { version = "0.24", features = ["extension-module"] }

# Internal
scriptmark-core = { path = "crates/scriptmark-core", version = "0.2.0" }
scriptmark-runner = { path = "crates/scriptmark-runner", version = "0.2.0" }
scriptmark-canvas = { path = "crates/scriptmark-canvas", version = "0.2.0" }
scriptmark-db = { path = "crates/scriptmark-db", version = "0.2.0" }
scriptmark-tui = { path = "crates/scriptmark-tui", version = "0.2.0" }
ratatui = "0.29"
crossterm = "0.29"
rusqlite = { version = "0.34", features = ["bundled"] }
