[project]
name = "grader"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
	"pydantic>=2.12.2",
	"pytest>=8.4.2",
	"pytest-timeout>=2.4.0",
	"rich>=14.2.0",
	"typer>=0.19.2",
	"uv-build>=0.9.3",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project.scripts]
grader = "grader.main:app"
