[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "scriptmark"
version = "0.2.0"
description = "Automated grading CLI for student programming assignments"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
authors = [{ name = "Acture", email = "acturea@gmail.com" }]
keywords = ["grading", "education", "autograding", "cli"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Education",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Programming Language :: Rust",
	"Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "scriptmark._scriptmark"
manifest-path = "crates/scriptmark-py/Cargo.toml"
python-source = "python"
