[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
common.workspace = true
dialoguer = { version = "0.11.0", features = ["completion", "fuzzy-matcher", "fuzzy-select", "history"] }
env_logger = "0.11.8"
itertools = "0.14.0"
log = "0.4.27"
once_cell = "1.21.3"
