[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
common.workspace = true
cursive = { version = "0.21.1", features = ["ansi", "toml"] }
dialoguer = { version = "0.11.0", features = ["completion", "fuzzy-matcher", "fuzzy-select", "history"] }
env_logger = "0.11.8"
flexi_logger = "0.30.1"
itertools = "0.14.0"
log = "0.4.27"
once_cell = "1.21.3"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
typed-builder = "0.21.0"
