[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
regex = "1.11.1"
num-traits = "0.2.19"
serde = { version = "1.0.219", features = ["derive"] }
typed-builder = "0.21.0"
itertools = "0.14.0"
csv = "1.3.1"
dev.workspace = true
serde_json = "1.0.140"
toml = "0.8.20"
