[package]
name = "scriptmark-canvas"
description = "Canvas LMS API integration for ScriptMark"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
scriptmark-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true }
thiserror = { workspace = true }
