[package]
name = "scriptmark-cli"
description = "CLI for ScriptMark — grade, run, summarize commands"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "scriptmark"
path = "src/main.rs"

[dependencies]
scriptmark-core = { workspace = true }
scriptmark-runner = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
owo-colors = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
