[package]
name = "scriptmark-core"
description = "Core library for ScriptMark — models, parsing, discovery, grading"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
csv = { workspace = true }
quick-xml = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
rhai = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tempfile = "3"
