[package]
name = "scriptmark-db"
description = "SQLite storage layer for ScriptMark"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
scriptmark-core = { workspace = true }
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
