[package]
name = "scriptmark-py"
description = "Python bindings for ScriptMark via PyO3"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
name = "_scriptmark"
crate-type = ["cdylib"]

[dependencies]
scriptmark = { path = "../scriptmark" }
pyo3 = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
