[package]
name = "scriptmark-runner"
description = "Test execution engine for ScriptMark — executors, checkers, orchestration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
scriptmark-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rhai = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
toml = { workspace = true }
