[package]
name = "scriptmark-tui"
description = "Terminal UI for ScriptMark"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
scriptmark-core = { workspace = true }
scriptmark-db = { workspace = true }
ratatui = "0.29"
crossterm = "0.29"
serde_json = { workspace = true }
anyhow = { workspace = true }
