[package]
name = "grader"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
env_logger = "0.11.6"
log = "0.4.26"
typed-builder = "0.20.0"
lab.workspace = true
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
itertools = "0.14.0"
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.8.20"
csv = "1.3.1"
suite.workspace = true
util.workspace = true
